# membrane

./: Cargo.toml  README.md
capnp/: bundle.capnp
crates/bundle/: Cargo.toml  build.rs
crates/bundle/src/: access.rs  grant.rs  lib.rs  revocation.rs  simulator.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  membrane.rs
