[package]
name = "membrane-bundle"
version = "0.1.0"
edition = "2021"
description = "Bundle access control: capability-scoped, time-bounded, revocable"

[build-dependencies]
capnpc = "0.23.3"

[dependencies]
membrane-core = { path = "../core" }
capnp = "0.23.2"
capnp-rpc = "0.23.0"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
